Consume with &&, but be the last in the chain

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,19 @@ jobs:
         mkdir test
         cd test && false && cd .. && echo after
         echo Goodbye
+
+  Multiline_fail_last_in_chain:
+    name: Multiline fail in chain
+    strategy:
+      fail-fast: false
+    runs-on: ubuntu-latest
+    steps:
+    - run: |
+        set -e
+        echo Hello
+        mkdir test
+        cd test && false && cd .. && echo after
+
   Multiline_fail_in_false_chain:
     name: Multiline fail in false chain
     strategy:
